--- a/retireez/package.json
+++ b/retireez/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.0",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tanstack/react-query": "^5.48.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.397.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-textarea-autosize": "^8.5.3",
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
